# guimauve

./: .gitignore  Cargo.toml  build.rs
crates/example/: Cargo.toml  build.rs
crates/example/src/: lib.rs
crates/plugin/: Cargo.toml
crates/plugin/src/: model_plugin.rs
databricks-to-onnx/: README.md  pyproject.toml  pyrightconfig.json
databricks-to-onnx/src/databricks_to_onnx/: __init__.py  cli.py  convert_model.py  converter.py  extractor.py  fetch_model.py  input_tensor_schema.py  load_model.py
python-onnx-example/: main.py  mha.py  multi_head_attention.py  positional_embedding.py  pyproject.toml  pyrightconfig.json
python-onnx-example/transformer/: encoder.py  feed_forward.py  multi_head_attention.py  residual_norm.py
src/: main.rs
src/model/: mod.rs
src/plugin/: mod.rs  model_plugin.rs
