[workspace]
members = ["crates/*"]
resolver = "2"

[package]
name = "guimauve"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
burn = { version = "0.21.0-pre.4", features = ["flex"] }
burn-store = { version = "0.21.0-pre.4" }
tokio = { version = "1.52.3", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

[build-dependencies]
burn-onnx = "0.21.0-pre.4"
