[project]
name = "databricks-to-onnx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "benfradet", email = "benjamin.fradet@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "click>=8.3.2",
    "mlflow>=2.21.3",
    "onnx>=1.14.0,<1.17",
    "onnxruntime>=1.25.1",
    "onnxsim @ git+https://github.com/BenFradet/onnxsim@fix-version",
    "torch>=2.1.0",
]

[project.scripts]
databricks-to-onnx = "databricks_to_onnx:cli"

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes (unused imports, undefined names, etc.)
    "I",     # isort (import ordering)
    "UP",    # pyupgrade (use modern Python syntax)
    "B",     # flake8-bugbear (common gotchas)
    "SIM",   # flake8-simplify (unnecessary complexity)
    "RUF",   # ruff-specific rules
]
