[package]
name = "example"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
burn = { version = "0.21.0", features = ["flex"] }
burn-store = { version = "0.21.0" }
plugin = { path = "../plugin" }
serde = "1.0.228"
serde_json = "1.0.149"

[build-dependencies]
burn-onnx = "0.21.0"
